#pragma once

namespace MellowPlayer::Infrastructure
{
    enum class Filter
    {
        All,
        Linux,
        AppImage,
        OSX,
        Windows
    };
}
